@@ -10,15 +10,13 @@
 
 <p>
 The GStreamer team is proud to announce a new release
-in the 0.10.x stable series of
-GNonLin.
+in the 0.10.x stable series of GNonLin.
 </p>
 
 <p>
-This module contains a set of plug-ins useful for non-linear editing.
-
-They are primarily used by PiTiVi, the non-linear editor.
-
+This module contains a set of plug-ins for GStreamer to ease the
+creation of multimedia editors, or any other application where a
+timeline-oriented use of GStreamer makes sense.
 </p>
   </intro>
   <features>
@@ -26,10 +24,10 @@ They are primarily used by PiTiVi, the non-linear editor.
   </features>
 
   <applications>
-GNonLin is primarily used by PiTiVi.
+GNonLin is primarily used by PiTiVi (http://www.pitivi.org/)
   </applications>
   <contributors>
-</contributors>
+  </contributors>
 
 <!--
   <api>
